[gd_scene load_steps=10 format=2]

[ext_resource path="res://ControlPanel.gd" type="Script" id=1]
[ext_resource path="res://art/lcd-bg.png" type="Texture" id=2]
[ext_resource path="res://fonts/DSEGWeather/DSEGWeather.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/DSEG14-Classic-MINI/DSEG14ClassicMini-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/DSEG7-Classic-MINI/DSEG7ClassicMini-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="DynamicFont" id=4]
size = 200
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="ControlPanel" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 514.5, 300 )
scale = Vector2( 2.058, 1.2 )
texture = ExtResource( 2 )

[node name="VContainer" type="VBoxContainer" parent="."]
margin_left = 89.4081
margin_top = 48.8503
margin_right = 944.408
margin_bottom = 537.85

[node name="HBoxContainer" type="HBoxContainer" parent="VContainer"]
margin_right = 855.0
margin_bottom = 118.0

[node name="CenterContainer" type="CenterContainer" parent="VContainer/HBoxContainer"]
margin_right = 93.0
margin_bottom = 118.0

[node name="WeatherBG" type="Label" parent="VContainer/HBoxContainer/CenterContainer"]
margin_right = 93.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.431373, 0.486275, 0.184314, 1 )
custom_colors/font_outline_modulate = Color( 0.431373, 0.486275, 0.184314, 1 )
custom_colors/font_color_shadow = Color( 0.431373, 0.486275, 0.184314, 1 )
text = "0"

[node name="Weather" type="Label" parent="VContainer/HBoxContainer/CenterContainer"]
margin_right = 93.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.431373, 0.486275, 0.184314, 1 )
custom_colors/font_color_shadow = Color( 0.431373, 0.486275, 0.184314, 1 )
text = "1"

[node name="CenterContainer2" type="CenterContainer" parent="VContainer/HBoxContainer"]
margin_left = 97.0
margin_right = 847.0
margin_bottom = 118.0

[node name="Title2" type="Label" parent="VContainer/HBoxContainer/CenterContainer2"]
margin_left = 375.0
margin_top = 44.0
margin_right = 375.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.431373, 0.486275, 0.184314, 1 )
custom_colors/font_outline_modulate = Color( 0.431373, 0.486275, 0.184314, 1 )
custom_colors/font_color_shadow = Color( 0.431373, 0.486275, 0.184314, 1 )

[node name="Title" type="Label" parent="VContainer/HBoxContainer/CenterContainer2"]
margin_top = 27.0
margin_right = 750.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "!!!!!BSA!LAUNCHER !v1!!!!-!!!!GO
"

[node name="UpperContainer" type="CenterContainer" parent="VContainer"]
margin_top = 122.0
margin_right = 855.0
margin_bottom = 218.0

[node name="UpperDisplayBG" type="Label" parent="VContainer/UpperContainer"]
margin_left = 19.0
margin_right = 835.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.431373, 0.486275, 0.184314, 1 )
custom_colors/font_outline_modulate = Color( 0.431373, 0.486275, 0.184314, 1 )
custom_colors/font_color_shadow = Color( 0.431373, 0.486275, 0.184314, 1 )
text = "
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"

[node name="UpperDisplay" type="Label" parent="VContainer/UpperContainer"]
margin_left = 19.0
margin_right = 835.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "
!!!!!!GANTRY!ARM!RETRACTING!!!!!!!
"

[node name="ClockContainer" type="CenterContainer" parent="VContainer"]
margin_top = 222.0
margin_right = 855.0
margin_bottom = 422.0

[node name="ScreenFrame" type="ColorRect" parent="VContainer/ClockContainer"]
margin_left = 427.0
margin_top = 100.0
margin_right = 427.0
margin_bottom = 100.0
color = Color( 0, 0, 0, 1 )

[node name="ScreenBg" type="ColorRect" parent="VContainer/ClockContainer"]
visible = false
material = SubResource( 3 )
margin_left = 427.0
margin_top = 100.0
margin_right = 427.0
margin_bottom = 100.0
color = Color( 0.572549, 0.647059, 0.25098, 1 )

[node name="CounterBG" type="Label" parent="VContainer/ClockContainer"]
margin_right = 855.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.431373, 0.486275, 0.184314, 1 )
custom_colors/font_outline_modulate = Color( 0.466667, 0.52549, 0.196078, 1 )
custom_colors/font_color_shadow = Color( 0.466667, 0.52549, 0.196078, 1 )
text = "000:00"
align = 1
valign = 1

[node name="Counter" type="Label" parent="VContainer/ClockContainer"]
margin_right = 855.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "t-0:02"
align = 1
valign = 1

[node name="LowerContainer" type="CenterContainer" parent="VContainer"]
margin_top = 426.0
margin_right = 855.0
margin_bottom = 489.0

[node name="LowerDisplayBG" type="Label" parent="VContainer/LowerContainer"]
margin_left = 19.0
margin_right = 835.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.431373, 0.486275, 0.184314, 1 )
custom_colors/font_outline_modulate = Color( 0.431373, 0.486275, 0.184314, 1 )
custom_colors/font_color_shadow = Color( 0.431373, 0.486275, 0.184314, 1 )
text = "
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~"

[node name="LowerDisplay" type="Label" parent="VContainer/LowerContainer"]
margin_left = 19.0
margin_right = 835.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "
!!!!!LAUNCH-CONTROLS!!ACTIVE!!!!!!"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

